--- a/components/ui/grid/grid.module.scss
+++ b/components/ui/grid/grid.module.scss
@@ -1,8 +1,8 @@
 @import "../../../styles/responsive";
 
 $directions: (
-  "flexRow": "row",
-  "flexColumn": "column",
+  "flexRow": row,
+  "flexColumn": column,
 );
 
 .grid {
