--- a/components/ui/grid/grid.module.scss
+++ b/components/ui/grid/grid.module.scss
@@ -5,6 +5,13 @@ $directions: (
   "flexColumn": column,
 );
 
+$spacing: (
+  "sm": 1rem,
+  "md": 3rem,
+  "lg": 5rem,
+  "xl": 10rem,
+);
+
 .grid {
   &_parent {
     display: flex;
@@ -25,7 +32,7 @@ $directions: (
     }
   }
 
-  @each $bp, $value in $breakpoints {
+  @each $bp in $breakpoints {
     @include responsive($bp) {
       @each $name, $value in $directions {
         &_direction_#{$bp}_#{$value} {
@@ -35,7 +42,13 @@ $directions: (
     }
   }
 
-  &_no_spacing {
-    padding: 0;
+  @each $bp in $breakpoints {
+    @include responsive($bp) {
+      @each $name, $value in $spacing {
+        &_direction_#{$bp}_#{$name} {
+          padding: $value
+        }
+      }
+    }
   }
 }
