--- a/components/dashboard/projectData/projectData.module.scss
+++ b/components/dashboard/projectData/projectData.module.scss
@@ -1,7 +1,3 @@
 .projectData {
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 1rem;
-  border-radius: 5px;
-  padding: 1rem;
+  margin-top: 1rem !important;
 }
