--- a/components/dashboard/projectState/projectState.module.scss
+++ b/components/dashboard/projectState/projectState.module.scss
@@ -1,9 +1,5 @@
 .projectState {
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 1rem;
-  border-radius: 5px;
-  padding: 1rem;
+  margin-top: 1rem !important;
 
   &_statusContainer {
     padding-bottom: 1rem;
