Finished on creating the dashboard, remains the side menu, handling modals and notifications

--- a/components/dashboard/tasksList/tasksList.module.scss
+++ b/components/dashboard/tasksList/tasksList.module.scss
@@ -5,11 +5,17 @@
     margin: 0;
   }
 
-  &_badgeContainer {
+  &_badgeContainer,
+  &_list {
     margin-top: 1rem;
   }
 
   &_badge {
     margin-right: 0.5rem;
+  }
+
+  &_list {
+    max-height: 22.5rem;
+    overflow-y: auto;
   }
 }
