--- a/components/common/actions/actions.module.scss
+++ b/components/common/actions/actions.module.scss
@@ -1,14 +1,15 @@
+ @import '../../../styles/responsive';
+
 .actions {
   &_icon {
-    margin-left: 1rem;
     transition: all ease 0.1s;
+    
+    &:last-of-type {
+      margin-left: 1rem;
+    }
 
     &:hover {
       transform: scale(1.2);
     }
-  }
-
-  &_text {
-    display: none;
   }
 }
