--- a/components/dashboard/header/header.module.scss
+++ b/components/dashboard/header/header.module.scss
@@ -6,5 +6,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include responsive(md) {
+      justify-content: flex-end;
+    }
+
+    @include responsive(lg) {
+      width: 100% !important;
+      padding-right: 1rem;
+    }
   }
 }
