--- a/components/dashboard/taskData/taskData.module.scss
+++ b/components/dashboard/taskData/taskData.module.scss
@@ -1,9 +1,15 @@
-.taskData {
-  margin: 1rem auto !important;
+@import "../../../styles/responsive";
 
+.taskData {
   &_data {
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid #2fb68e;
+  }
+
+  &_timer {
+    @include responsive(lg) {
+      flex: 1;
+    }
   }
 }
