Created a modal for adding project's form, created on submit method

--- a/components/home/signIn/signIn.module.scss
+++ b/components/home/signIn/signIn.module.scss
@@ -76,5 +76,17 @@
 
   &_icon {
     margin-right: 0.8rem;
+
+    @include responsive(lg) {
+      flex-basis: 2rem;
+      margin-left: 1.8rem;
+    }
+  }
+
+  &_text {
+    @include responsive(lg) {
+      flex: 1;
+      text-align: left;
+    }
   }
 }
