--- a/components/dashboard/menu/menu.module.scss
+++ b/components/dashboard/menu/menu.module.scss
@@ -4,6 +4,7 @@
   &_float {
     display: block;
     width: 85%;
+    max-width: 18.75rem;
     height: 100vh;
     position: fixed;
     z-index: 2;
