--- a/components/dashboard/task/task.module.scss
+++ b/components/dashboard/task/task.module.scss
@@ -2,7 +2,11 @@
   padding: 0.5rem;
   border-radius: 5px;
   margin-bottom: 0.5rem;
-  transition: all 0.3s ease;
+  transition: all 0.1s ease;
+
+  &_active {
+    border-left: 5px solid #2FB48C;
+  }
 
   &:hover {
     transform: scale(0.95);
