--- a/components/layout/dashboardLayout/dashboardLayout.module.scss
+++ b/components/layout/dashboardLayout/dashboardLayout.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/responsive';
+
 .dashboardLayout {
   &_initialView {
     max-width: 30rem;
@@ -6,6 +8,11 @@
 
   &_title {
     margin-bottom: 3rem;
+    margin-top: 3rem;
+
+    @include responsive(lg) {
+      margin-top: 0;
+    }
   }
 
   &_illustration {
