--- a/components/dashboard/project/item/item.module.scss
+++ b/components/dashboard/project/item/item.module.scss
@@ -7,25 +7,35 @@
   user-select: none;
   transition: all 0.2s ease;
 
+  &_name {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
   &:hover {
     padding: 0.6rem 0.5rem;
     margin: 0.5rem auto;
   }
-  
+
   &_active {
     padding: 0.6rem 0.5rem;
     background-color: #3c589f !important;
     transform: scaleY(1.1);
     position: relative;
     pointer-events: none;
+
+    &:first-of-type {
+      margin-top: 0.1rem;
+    }
   }
 
   &_active::before {
-    content: '';
+    content: "";
     display: block;
     width: 0;
     height: 4px;
-    background-color: #2FB48C;
+    background-color: #2fb48c;
     position: absolute;
     top: 0;
     left: 0;
