Re invented some parts of the UI and implemented some functions like watching the current state of the project

--- a/components/layout/dashboardLayout/dashboardLayout.module.scss
+++ b/components/layout/dashboardLayout/dashboardLayout.module.scss
@@ -9,6 +9,7 @@
   &_title {
     margin-bottom: 3rem;
     margin-top: 3rem;
+    text-align: center;
 
     @include responsive(lg) {
       margin-top: 0;
