--- a/components/common/alert/alert.module.scss
+++ b/components/common/alert/alert.module.scss
@@ -1,24 +1,25 @@
-.notification {
+.alert {
   position: fixed;
   z-index: 1;
-  bottom: 10%;
-  right: -140%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
   border-radius: 5px;
-  padding: 0.5rem 0;
-  transition: all 0.3s ease;
-  
-  &_true {
-    right: 0;
-  }
+  padding: 1rem;
 
   &_head {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 1rem;
+  }
+
+  &_button {
+    margin-top: 0.5rem;
   }
 
   &_x {
-    font-size: 1.5rem !important;
     cursor: pointer;
   }
 }
