Functionalities finished, remains on adding animations to project

--- a/components/dashboard/menu/menu/menu.module.scss
+++ b/components/dashboard/menu/menu/menu.module.scss
@@ -42,7 +42,11 @@
     border-radius: 5px;
     height: 12.5rem;
     overflow-y: auto;
-    max-width: 15.625rem;
+    width: 100%;
+
+    @include responsive(lg) {
+      max-width: 15.625rem;
+    }
   }
 
   &_addProject {
