--- a/components/dashboard/task/data/taskData.module.scss
+++ b/components/dashboard/task/data/taskData.module.scss
@@ -16,14 +16,21 @@
       margin-bottom: 0rem;
       margin-right: 1rem;
     }
+
+    @include responsive(lg) {
+      flex-basis: 55%;
+    }
   }
 
   &_timer {
     border-radius: 5px;
     padding: 1rem;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     @include responsive(md) {
-      flex-basis: 30%;
+      flex-grow: 1;
     }
   }
 }
